discussion/kv_engine/184517/184517_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Add support for retrieving per-thread cpu usage

Change-Id: I80ea3eda72e8a1cb81a0cf281cd248e0bcebe20c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2023-01-05 13:59:54.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-05 14:14:23.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21974/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/daemon/stats.cc b/daemon/stats.cc
index 07f47e4df..6eabeecd8 100644
--- a/daemon/stats.cc
+++ b/daemon/stats.cc
@@ -247,7 +247,10 @@ cb::engine_errc server_prometheus_stats(
                     sigar::iterate_process_threads(
                             instance,
                             getpid(),
-                            [&amp;kvCollector](auto tid, auto name, auto user, auto system) {
+                            [&amp;kvCollector](auto tid,
+                                           auto name,
+                                           auto user,
+                                           auto system) {
                                 std::string n(name);
                                 if (name.empty()) {
                                     n = std::to_string(tid);
@@ -262,8 +265,7 @@ cb::engine_errc server_prometheus_stats(
                                         {{&quot;thread&quot;, n}, {&quot;domain&quot;, &quot;system&quot;}});
                             });
                 } catch (const std::exception&amp; e) {
-                    LOG_WARNING(&quot;sigar::iterate_process_threads: {}&quot;,
-                                e.what());
+                    LOG_WARNING(&quot;sigar::iterate_process_threads: {}&quot;, e.what());
                 }
                 sigar_close(instance);
             }

EOF
</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21974/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22347/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:36:10: error: "sigar.h" file not found [clang-diagnostic-error]
#include <sigar.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/stats.cc:24:10: error: "sigar.h" file not found [clang-diagnostic-error]
#include <sigar.h>
         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22347/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:36:10:
error: "sigar.h" file not found [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22347/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51678/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/daemon/stats.cc(24): fatal error C1083: Cannot open include file: "sigar.h": No such file or directory ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51678/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43384/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/protocol/mcbp/stats_context.cc:36:10:
fatal error: "sigar.h" file not found
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43384/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1110/ : FAILURE

Compile error at [2023-01-05T14:04:10.281Z] /home/couchbase/jenkins/workspace/kv_engine.linux-debug_master/kv_engine/daemon/stats.cc:24:10:
fatal error: sigar.h: No such file or directory
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1110/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12068/ : FAILURE

Compile error at [2023-01-05T14:07:08.963Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/daemon/stats.cc:24:10:
fatal error: "sigar.h" file not found
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12068/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12155/ : FAILURE

Compile error at [2023-01-05T14:08:25.015Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/daemon/protocol/mcbp/stats_context.cc:36:10:
fatal error: sigar.h: No such file or directory
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12155/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24814/ : FAILURE

Compile error at [2023-01-05T14:05:06.453Z] ../kv_engine/daemon/protocol/mcbp/stats_context.cc:36:10:
fatal error: sigar.h: No such file or directory
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24814/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23918/ : FAILURE

Compile error at [2023-01-05T14:10:49.205Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master_2/kv_engine/daemon/stats.cc:24:10:
fatal error: "sigar.h" file not found
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23918/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24391/ : FAILURE

Compile error at [2023-01-05T14:03:42.440Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/daemon/stats.cc:24:10:
fatal error: sigar.h: No such file or directory
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24391/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25673/ : FAILURE

Compile error at [2023-01-05T14:04:57.052Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/stats.cc:24:10:
fatal error: "sigar.h" file not found
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25673/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32810/ : FAILURE

Compile error at [2023-01-05T14:05:52.249Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/daemon/stats.cc:24:10:
fatal error: "sigar.h" file not found
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32810/ )
----------------------------------------------------------------------------------------------------------------------
